<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/taskHeading" android:text="@string/taskName"></TextView>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/priceLabel" android:layout_width="wrap_content" android:text="@string/price"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/priceValue" android:text="@string/taskViewPrice"></TextView>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/location" android:id="@+id/locationLabel"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/taskViewDeadline" android:id="@+id/locationValue"></TextView>
    </LinearLayout>
    <TextView android:layout_height="wrap_content" android:id="@+id/taskDescription" android:layout_width="wrap_content" android:text="@string/taskDescription"></TextView>
    <Button android:text="@string/taskShoot" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/taskShootButton"></Button>
</LinearLayout>
